compiler/testData/diagnostics/tests/secondaryConstructors/constructorInTrait.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
interface A {
    <!CONSTRUCTOR_IN_INTERFACE!>constructor()<!>
}